--- a/css/Doctors.css
+++ b/css/Doctors.css
@@ -1,6 +1,3 @@
-body
-{
-}
 
 *{
 	margin: 0;
@@ -8,14 +5,18 @@ body
 	font-family: sans-serif;
 }
 
+
+
 .team-section{
+	display:none;
 	overflow: hidden;
 	text-align: center;
 	background-image: url(../Foto/department.jpg);
 	background-repeat: no-repeat;
-background-size: cover;
-	//background: #34495e;
+	background-size: cover;
 	padding: 60px;
+	
+	
 }
 
 .team-section h1{
@@ -99,6 +100,8 @@ background-size: cover;
 	font-size: 22px;
   }
 
+
 html{
 	scroll-behavior: smooth;
 	}
+
