--- a/css/Table.css
+++ b/css/Table.css
@@ -1,4 +1,5 @@
         .DocBTN{
+            width:300px;
             margin-top:30px;
             font-family: "Montserrat", sans-serif;
             font-weight: 500;
@@ -11,6 +12,7 @@
             border-radius: 15px;
             cursor: pointer;
             transition: all 0.3s ease 0s;
+            
                 }
 
         #table-wrapper {
