--- a/css/Login1.css
+++ b/css/Login1.css
@@ -19,7 +19,7 @@
 display:flex;
 flex-direction:column;
 background-image: url(../Foto/5804.jpg);
-height:100vh;
+min-height:80vh;
 background-repeat: no-repeat;
 background-size: cover;
 padding-left:100px;
@@ -91,6 +91,9 @@ margin-bottom:30px;
   float:right;
 }
 
+/* #formRegister{
+  margin-top:100px;
+} */
 
 .Register-box{
  
@@ -133,7 +136,6 @@ margin-bottom:30px;
 	background: #24c1d6;
 	bottom: 40px;
 	right: 50px;
-  
 	text-decoration: none;
 	text-align: center;
 	line-height: 50px;
