--- a/css/ContactUs.css
+++ b/css/ContactUs.css
@@ -39,7 +39,7 @@ section{
 
 .form-controlContactUs
 {
-    width: 600px;
+    width: 50%;
     background: transparent;
     border: none;
     outline: none;
