--- a/css/Login1.css
+++ b/css/Login1.css
@@ -31,17 +31,17 @@ margin-bottom:30px;
 }
 
 .login-box{
-
-  
-  width: 280px;
-  margin-top:20vh;
+  width:30%;
+  /* width: 280px; */
+  /* margin-top:20vh;
   margin-left: 20vh;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%); */
   color: white;
   
 }
 .login-box h1{
   float: left;
+  /* font-size:200%; */
   font-size: 40px;
   border-bottom: 6px solid #007a29;
   margin-bottom: 50px;
