--- a/css/AdminActivity.css
+++ b/css/AdminActivity.css
@@ -21,18 +21,46 @@ section{
     flex-direction:column;
 }
 
+.SearchForm2{
+    display:flex; 
+    flex-direction:column;
+}
+
 table{
     border:1px black ; 
     line-height:25px;
 }
 
-@media all and (max-width: 1210px){
+@media (max-width: 1210px){
     section{
         flex-direction:column;
-        justify-content: normal;
+        /* justify-content: normal; */
         padding-top:5%;
     }
     .SearchForm{
-        margin-bottom:20%;
+        width: 800px;
     }
 }
+
+@media (max-width:970px){
+    .SearchForm{
+        width:600px;
+    }
+}
+
+      @media (max-width:600px){
+    
+    .SearchForm{
+        width:400px;
+    }
+    } 
+
+    @media (max-width:400px){
+        .SearchForm{
+            width: 300px;
+        }
+        section{
+            min-height:120vh;
+            padding-bottom: 50px;
+        }
+    }
