--- a/css/Appointment.css
+++ b/css/Appointment.css
@@ -105,3 +105,26 @@ margin-right:5px;
   float:right;
 }
 
+@media(max-width:510px){
+  .form{
+    width:300px;
+    height:auto;
+    margin:50px auto;
+  }
+  .box{
+    flex-direction: column;
+    padding-bottom: 20px;
+  }
+  .radio-input{
+    display:inline-block;
+    float:left;
+    
+  }
+  .radio-input input{
+    margin-right:5px;
+  }
+  .DivForm{
+    text-align:center;
+  }
+}
+
