--- a/css/Login1.css
+++ b/css/Login1.css
@@ -19,7 +19,7 @@
 display:flex;
 flex-direction:column;
 background-image: url(../Foto/5804.jpg);
-min-height:80vh;
+min-height:60vh;
 background-repeat: no-repeat;
 background-size: cover;
 padding-left:100px;
@@ -27,16 +27,14 @@ padding-left:100px;
 
 .bodyh1{
 margin-top:100px;
-margin-bottom:30px;
+/* margin-bottom:30px; */
 }
 
 .login-box{
-  width:30%;
-  /* width: 280px; */
-  /* margin-top:20vh;
-  margin-left: 20vh;
-  transform: translate(-50%,-50%); */
+  width:300px;
   color: white;
+  /* margin-top:100px; */
+  margin-bottom:50px;
   
 }
 .login-box h1{
@@ -48,7 +46,7 @@ margin-bottom:30px;
   padding: 13px 0;
 }
 .textbox{
-  width: 100%;
+  width: 80%;
   overflow: hidden;
   font-size: 20px;
   padding: 8px 0;
@@ -96,13 +94,12 @@ margin-bottom:30px;
 } */
 
 .Register-box{
- 
-  
-  width: 280px;
+  width: 300px;
   display:none;
-  margin-top:200px;
+  /* margin-top:200px;
   margin-left: 20vh;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%); */
+  margin-bottom:50px;
   color: white;
   
 }
@@ -146,3 +143,12 @@ margin-bottom:30px;
 html{
 	scroll-behavior: smooth;
     }
+
+@media(max-width:500px){
+  .textbox i{
+    display:none;
+  }
+  .home{
+    padding-left: 20px;
+  }
+}
